<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="314dp"
        android:layout_height="49dp"
        android:text="@string/ctxmenu"
        android:textAlignment="center"
        android:textSize="16pt"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/button3"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:onClick="entrarTemperatura"
        android:text="@string/ctxTituloTemp"
        app:icon="@drawable/temperatura"
        app:iconPadding="-18dp"
        app:iconTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.256" />

    <Button
        android:id="@+id/btnMoedas"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:onClick="entrarMoedas"
        android:text="@string/BtnMoedas"
        app:icon="@drawable/dolar"
        app:iconPadding="-18dp"
        app:iconTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/btnMetInfo"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:onClick="entrarInformatica"
        android:text="@string/BtnMetInfo"
        app:icon="@drawable/bit"
        app:iconPadding="-20dp"
        app:iconTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.172" />

    <Button
        android:id="@+id/BtnPesos"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:onClick="entrarPesos"
        android:text="@string/BtnPesos"
        app:icon="@drawable/peso"
        app:iconPadding="-18dp"
        app:iconTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.514" />

    <Button
        android:id="@+id/ctxconv"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:onClick="entrarDistancia"
        android:text="@string/BTNConverte"
        app:icon="@drawable/dista"
        app:iconPadding="-18dp"
        app:iconTint="#FEFEFE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34" />

    <Button
        android:id="@+id/ctxsair"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:onClick="sair"
        android:text="@string/Sair"
        app:icon="@drawable/sair"
        app:iconPadding="-18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.671" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="360dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="47dp"
        android:text="@string/desenvolvido"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ctxsair"
        app:layout_constraintVertical_bias="0.476" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="30dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="01001"
        android:textAlignment="center"
        android:textSize="2.5pt"
        app:layout_constraintBottom_toBottomOf="@+id/btnMetInfo"
        app:layout_constraintEnd_toEndOf="@+id/btnMetInfo"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="@+id/btnMetInfo"
        app:layout_constraintTop_toTopOf="@+id/btnMetInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>